# gaia

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COUNCIL_CHAMBER.md  GAIA_CHORD_MANIFEST.aaak  GAIA_Specialist_Agent_Mesh_v2.md  INSPIRATIONS.md  README.md  docker-compose.candidate.yml  docker-compose.ha.yml  docker-compose.model-test.yml  docker-compose.override.yml  docker-compose.yml  flatten_soa.sh  gaia.sh  jmalje6jvcqus9drogsvipdde8mblbq8.darc  manifest  notebooklm_sync.py  ogsurilvdfphane2llv41b6hpsgfcosr.darc  patch_scripts.py  patch_world_state_read_only.py  test_candidate.sh
candidates/gaia-audio/: Dockerfile  pyproject.toml  requirements.txt
candidates/gaia-audio/gaia_audio/: __init__.py  audio_queue.py  config.py  diarization.py  gpu_manager.py  main.py  models.py  refiner_engine.py  stt_engine.py  tts_engine.py
candidates/gaia-audio/tests/: test_tts_engine.py
candidates/gaia-common/: .dockerignore  README.md  pyproject.toml  requirements-vector.txt
candidates/gaia-common/gaia_common/: __init__.py  config.py  constants.py  errors.py  event_buffer.py
candidates/gaia-common/tests/: conftest.py  test_blueprint_io.py  test_blueprint_roundtrip.py  test_code_evolution.py  test_helpers.py  test_locality.py  test_packet_factory.py  test_packet_utils.py  test_protocols.py  test_resilience.py  test_service_client_retry.py
candidates/gaia-core/: Dockerfile  Dockerfile.candidate  README.md  config.json  e2e_mcp_write_test.py  e2e_rag_smoke_test.py  e2e_sidecar_write_test.py  entrypoint.sh  gaia_direct_response.py  gaia_rescue.py  pyproject.toml  requirements-gpu.txt  requirements.txt  setup.py  verify_integration.py
candidates/gaia-core/gaia_core/: config.py  contract.yaml  gaia_constants.json  gaia_engine.py  inference_server.py  main.py  model_server.py  prime_polygraph.py
candidates/gaia-core/scripts/: penpal_pipeline.py  smoke_test_cognitive.py  test_prime_cogpacket.py
candidates/gaia-core/tests/: test_checkpoint_endpoint.py  test_complexity_assessment.py  test_noun_validation.py  test_research_history_persistence.py  test_response_tagging.py  test_stream_integrity.py
candidates/gaia-orchestrator/: Dockerfile  pyproject.toml
candidates/gaia-orchestrator/config/: orchestrator.yaml
candidates/gaia-orchestrator/gaia_orchestrator/: config.py  consciousness_matrix.py  docker_manager.py  gpu_manager.py  handoff_manager.py  health_watchdog.py  lifecycle_machine.py  main.py  state.py  tier_router.py  watch_manager.py
candidates/gaia-study/: .dockerignore  Dockerfile  README.md  pyproject.toml  quanto_quantize_9b.py  requirements.txt  train_8b_direct.py  unsloth_train_9b.py
candidates/gaia-study/gaia_study/: adapter_to_gguf.py  adaptive_trainer.py  general_extractor.py  main.py  merge_and_requantize.py  qlora_trainer.py  server.py  skill_eval_probes.py  study_mode_manager.py  training_subprocess.py
candidates/gaia-study/scripts/: build_curriculum.py  generate_curriculum.py  self_awareness_pipeline.py  train_multimodal.py  validate_adapter.py
candidates/gaia-study/tests/: conftest.py  test_study_mode_manager.py  test_world_merges_routes.py
candidates/gaia-web/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
candidates/gaia-web/gaia_web/: __init__.py  attachment_handler.py  contract.yaml  discord_interface.py  main.py  translation.py  voice_manager.py
candidates/gaia-web/static/: app.js  index.html  style.css
candidates/gaia-web/tests/: test_blueprints.py  test_discord_utils.py  test_files.py  test_health.py  test_hooks.py  test_message_queue_persistence.py  test_security_scanner.py  test_terminal.py  test_training_routes.py  test_voice.py  test_world_merges_proxy.py
gaia-audio/: Dockerfile  pyproject.toml  requirements.txt
gaia-audio/gaia_audio/: CONTRACT.md  config.json  config.py  contract.yaml  gpu_manager.py  main.py  models.py  music_engine.py  refiner_engine.py  status.py  stt_engine.py  tts_engine.py
gaia-audio/tests/: test_endpoints.py  test_gpu_manager.py  test_status.py  test_stt_engine.py
gaia-core/: .dockerignore  Dockerfile  Dockerfile.candidate  config.json  e2e_mcp_write_test.py  e2e_sidecar_write_test.py  entrypoint.sh  gaia_direct_response.py  gaia_rescue.py  pyproject.toml  requirements-gpu.txt  requirements.in  requirements.txt
gaia-core/app/shared/: sessions.json
gaia-core/gaia_core/: CONTRACT.md  __init__.py  config.json  config.py  gaia_constants.json  gaia_engine.py  inference_server.py  main.py  model_server.py  prime_polygraph.py
gaia-core/gaia_core/api/: model_endpoints.py  sleep_endpoints.py
gaia-core/gaia_core/behavior/: __init__.py  persona_adapter.py  (+1 more)
gaia-core/scripts/: codemind_training_comparison.py  penpal_pipeline.py  repro_231_tool_grounding.py  review_discord_logs.py  smoke_test_cognitive.py  test_prime_cogpacket.py
gaia-core/tests/: test_checkpoint_endpoint.py  test_complexity_assessment.py  test_council_notes.py  test_noun_validation.py  test_observer_health_endpoint.py  test_prompt_builder_slim.py  test_prompt_builder_tr7f.py  test_response_tagging.py  test_stream_integrity.py
gaia-mcp/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
gaia-mcp/gaia_mcp/: CONTRACT.md  __init__.py  approval.py  capabilities.py  config.json  listener_tools.py  main.py  notebooklm_tools.py  server.py  skill_gateway.py  skill_manager.py  tools.py  web_tools.py
gaia-mcp/tests/: test_approval.py  test_fabric_tools.py  test_kanka_tools.py  test_listener_tools.py  test_web_tools.py
gaia-web/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
gaia-web/data/: dm_blocklist.json  voice_whitelist.json
gaia-web/gaia_web/: CONTRACT.md  attachment_handler.py  config.json  discord_interface.py  dm_blocklist.py  main.py  voice_manager.py
gaia-web/static/: app.js  brain_region_atlas.json  brain_region_atlas_v2.json  index.html  style.css  training.html  world_merges.html
gaia-web/tests/: conftest.py  test_activations_atlas.py  test_health.py  test_message_queue_persistence.py  test_retry_failover.py  test_security_scanner.py  test_voice.py
(+1903 files in other folders)
