[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-audio"
version = "0.1.0"
description = "GAIA sensory service — half-duplex STT/TTS with GPU management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "dataclasses-json",
    "transformers>=4.45.0",
    "numpy",
    "soundfile",
    "scipy",
    "librosa",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
qwen = [
    "qwen-asr>=0.1.0",
    "qwen-tts>=0.1.0",
]
vision = [
    "opencv-python-headless",
    "pillow",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
