[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-core"
version = "0.1.0"
description = "GAIA Core - The Brain: Cognitive loop and reasoning engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GAIA Project", email = "gaia@localhost"},
]
dependencies = [
    "gaia-common @ file:///gaia-common",
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "regex>=2023.0.0",
    "requests",
    "discord.py",
    "PyYAML",
    # CPU inference for lite model (GGUF via llama.cpp)
    "llama-cpp-python>=0.3.16",
    # API fallback providers
    "groq>=0.4.0",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.11.2",
    "torch>=2.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gaia_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",  # Module-level import not at top (intentional: faulthandler, conditional imports)
    "F403",  # Star imports in __init__.py (intentional re-exports)
    "F401",  # Unused imports (cleanup tracked separately, non-blocking)
    "F841",  # Unused local variables (cleanup tracked separately)
    "E401",  # Multiple imports on one line (style preference)
    "F541",  # f-string without placeholders (harmless)
    "E701",  # Multiple statements on one line (colon)
    "E731",  # Lambda assignment (placeholder stubs for unimplemented modules)
    "E741",  # Ambiguous variable name (l in list comprehensions)
    "F811",  # Redefinition of unused name (intentional in lazy-import patterns)
]

[tool.pytest.ini_options]
testpaths = ["gaia_core"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
no_strict_optional = true

[tool.hatch.metadata]
allow-direct-references = true
