[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-mcp"
version = "0.1.0"
description = "GAIA MCP - The Hands: Sandboxed tool execution environment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GAIA Project", email = "gaia@localhost"},
]
dependencies = [
    "gaia-common",
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gaia_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
