[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-mcp"
version = "0.1.0"
description = "GAIA MCP - The Hands: Sandboxed tool execution environment"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GAIA Project", email = "gaia@localhost"},
]
dependencies = [
    "gaia-common",
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gaia_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",  # Module-level import not at top (intentional: conditional imports)
    "F403",  # Star imports in __init__.py (intentional re-exports)
    "F401",  # Unused imports (cleanup tracked separately)
    "F841",  # Unused local variables
    "E401",  # Multiple imports on one line
    "F541",  # f-string without placeholders
    "E701",  # Multiple statements on one line (colon)
    "E731",  # Lambda assignment
    "E741",  # Ambiguous variable name
    "F811",  # Redefinition of unused name
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
no_strict_optional = true
