[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-web"
version = "0.1.0"
description = "GAIA Web - The Face: UI and API gateway"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GAIA Project", email = "gaia@localhost"},
]
dependencies = [
    "gaia-common",
    "flask>=2.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.29.0",
    "httpx>=0.25.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
    "py-cord[voice]>=2.6.0",
    "PyNaCl>=1.5.0",
    "webrtcvad>=2.0.10",
    "numpy>=1.24.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gaia_web"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",  # Module-level import not at top (intentional: conditional imports)
    "F403",  # Star imports in __init__.py (intentional re-exports)
    "F401",  # Unused imports (cleanup tracked separately)
    "F841",  # Unused local variables
    "E401",  # Multiple imports on one line
    "F541",  # f-string without placeholders
    "E701",  # Multiple statements on one line (colon)
    "E731",  # Lambda assignment
    "E741",  # Ambiguous variable name
    "F811",  # Redefinition of unused name
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
no_strict_optional = true
