[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaia-audio"
version = "0.1.0"
description = "GAIA sensory service — half-duplex STT/TTS with GPU management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "faster-whisper>=1.0.0",
    "numpy",
    "soundfile",
    "scipy",
    "torch>=2.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
realtime = [
    "RealtimeSTT>=0.3.0",
    "RealtimeTTS>=0.4.0",
]
vision = [
    "opencv-python-headless",
    "pillow",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
