[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-orchestrator"
version = "0.1.0"
description = "GAIA GPU and Container Lifecycle Coordination Service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GAIA Team"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "docker>=7.0.0",
    "pynvml>=11.5.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[project.scripts]
gaia-orchestrator = "gaia_orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaia_orchestrator*"]
