[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-orchestrator"
version = "0.1.0"
description = "GAIA GPU and Container Lifecycle Coordination Service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GAIA Team"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "docker>=7.0.0",
    "pynvml>=11.5.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
gaia-orchestrator = "gaia_orchestrator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaia_orchestrator*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",  # Module-level import not at top (intentional: conditional imports)
    "F403",  # Star imports in __init__.py (intentional re-exports)
    "F401",  # Unused imports (cleanup tracked separately)
    "F841",  # Unused local variables
    "E401",  # Multiple imports on one line
    "F541",  # f-string without placeholders
    "E701",  # Multiple statements on one line (colon)
    "E731",  # Lambda assignment
    "E741",  # Ambiguous variable name
    "F811",  # Redefinition of unused name
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]
